ft: add contents to deadline tiles and fix user button wraps

--- a/style.css
+++ b/style.css
@@ -2,18 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.button {
-  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded block w-40;
-}
 
 .deadline-tile {
-  @apply flex flex-col items-center justify-center w-[90%] h-10 ml-auto mr-auto mt-2 mb-2 p-4 border-2 border-gray-300 rounded-xl;
+  @apply flex flex-col justify-center w-[90%] ml-auto mr-auto mt-2 mb-2 p-4 border-2 border-gray-300 rounded-xl;
   @apply hover:bg-gray-300;
   @apply cursor-pointer;
-}
-
-.hide {
-  @apply hidden !important;
 }
 
 .upcoming {
